<resources>
    <string name="app_name">NTP服务修改器</string>
    <string name="ste0">看起来，你是第一次打开此软件。为了更方便的处理你遇到的问题，我们特邀请你加入我们的用户群：\nQQ 群号: 985171352\n此软件包含了多种实用功能。如果觉得好用，请给个好评（。</string>
    <string name="ste1">由于Android SDK并没有开放时间设置权限给用户级软件，故只能使用超级用户权限执行SHELL以执行更改，但执行过程难免产生延迟。\n故此声明: 本软件只起到辅助校对作用，实际依赖系统底层的NTP同步服务，如您觉得时间不准，您可手动开关系统设置中的【启用网络上的时间】以完成校对，谢谢。</string>
    <string name="about">关于</string>
    <string name="contact">联系作者</string>
    <string name="exit">退出</string>
    <string name="welcome">欢迎使用星辰开发的NTP服务修改工具</string>
    <string name="tip1">此程序仅针对于运行 Android 8.0 – 10.0 的设备开发。</string>
    <string name="t1">当前NTP服务器地址:</string>
    <string name="t2">无法获取或为空</string>
    <string name="t3">修改NTP服务器地址:</string>
    <string name="t4">错误的更改将导致您的NTP服务无法正常工作。</string>
    <string name="t5">本机时间:</string>
    <string name="e1">NTP服务器地址</string>
    <string name="c1">使用推荐的NTP服务器 - NTP1.ALIYUN.COM</string>
    <string name="b1">立即修改</string>
    <string name="b2">综合测试</string>
    <string name="date">NULL</string>
    <string name="asrc">开源许可</string>
    <string name="processing_hint">Processing</string>
    <string name="processing_content">命令正在执行中..如有授权申请请允许..</string>
    <string name="ok">确定</string>
    <string name="reboot">硬重启</string>
    <string name="setup_adb">远程ADB调试设置</string>
    <string name="adbpre">ADB网络调试</string>
    <string name="adbtips">温馨提示：\nADB调试端口通常为5555，\n端口为-1即ADB调试已被关闭。\n部分Android系统需要重启才能对ADB进行干涉。\nADB连接命令:adb connect IP:PORT\nADB断开连接:adb disconnect\nADB关闭:stop adbd\nADB启动:start adbd\n如手机未安装adb则无法正常执行。\n有些系统需要手动开关USB调试才可使用。</string>
    <string name="defport">使用默认端口</string>
    <string name="empy">NULL</string>
    <string name="ntptime">网络时间:</string>
    <string name="adbremote">远程ADB调试</string>
    <string name="ui_update">令人兴奋的时刻到啦！本软件的UI已经更新~如果有任何bug与建议请直接联系我哦~\n提示：有些NTP服务器会禁ICMP，所以如果遇到丢包也是正常现象的说。</string>
    <string name="ntp_location">地理位置:</string>
    <string name="local_offset">本地差值:</string>
    <string name="adb_notice">本区块将对ADB端口进行更改，请勿超过最大范围。</string>
    <string name="current_ip">本机局域网IP地址:</string>
    <string name="adb_set">ADB端口设置</string>
    <string name="local_clock">本机时钟</string>
    <string name="moreinfo">更多信息</string>
    <string name="plusopre">高级操作</string>
    <string name="usefullwd">实用控件</string>
    <string name="usefultools">实用工具</string>
    <string name="worldclock_web">世界时间(网页)</string>
    <string name="time_test_web">时间测试(网页)</string>
    <string name="reboot_to_recovery">重启到恢复模式</string>
    <string name="reboot_to_bootloader">重启到引导模式</string>
    <string name="captive_portal_set_title">Captive Portal 地址设置</string>
    <string name="captive_portal_set_info">本区块可以设置 Captive Portal 地址，并对其进行测试。</string>
    <string name="captive_portal_status">Captive Portal 启用状态</string>
    <string name="_204_info">它通过服务器响应204状态码来检测手机是否联网。</string>
    <string name="status">状态</string>
    <string name="https_status">HTTPS 启用状态</string>
    <string name="https_advise">HTTPS连接相对于HTTP较为安全，建议启用。</string>
    <string name="https_204_server">HTTPS 服务器地址</string>
    <string name="https_http_n_https_status">HTTPS连接相对于HTTP较为安全。 \n但是，如果你没有启用HTTPS模式，此设置将无效。</string>
    <string name="http_204_server">HTTP 服务器地址</string>
    <string name="https_http_n_http_advise">HTTP连接相对于HTTPS较为不安全。 \n但是，你仍然可以设置一个HTTP地址。</string>
    <string name="change_204">修改服务器地址</string>
    <string name="flush_wi_fi_mobile_network">刷新 WI-FI/Mobile Network</string>
    <string name="use_recommend">使用 MIUI CN 204 服务器</string>
    <string name="ddos_tester">DDOS_TESTER</string>
    <string name="this_block_can_do_a_flood_of_post_packet_to_target_for_test_purpose">This block can do a flood of post packet to target for test purpose.</string>
    <string name="target_s_url">TARGET\'S URL:</string>
    <string name="please_enter_the_target_s_url">PLEASE ENTER THE TARGET\'S URL</string>
    <string name="for_better_result_nplease_select_a_site_with_non_cdn_included_to_execute_the_this_test">For better result, PLEASE SELECT A site with non-cdn included to execute the this test.</string>
    <string name="test_info">TEST INFO</string>
    <string name="thread_has_started">Thread has started:</string>
    <string name="_0">0</string>
    <string name="_200_count">200 Count:</string>
    <string name="thread_error_count">Thread Error Count:</string>
    <string name="thread_s_setting">Thread\'s Setting:</string>
    <string name="num_of_single_threads">NUM OF Single THREADS</string>
    <string name="for_better_result_please_edit_a_sense_value">For better result,PLEASE edit a sense value.</string>
    <string name="num_of_concurrency_threads">NUM OF Concurrency THREADS</string>
    <string name="tap_to_stop_the_thread_poll">Tap To Stop The Thread Poll</string>
    <string name="start_the_thread_pool">Start the Thread POOL</string>
    <string name="blog">作者博客</string>
    <string name="super_su_exec">超级用户命令执行</string>
    <string name="super_su_tips">本区块可以以超级用户的权限执行一个命令， 由于权限过高，请小心谨慎使用。</string>
    <string name="command">Command</string>
    <string name="execable_single_command">执行的单条命令</string>
    <string name="return_from_terminal">Return</string>
    <string name="result_of_return">返回的结果</string>
    <string name="execute">EXECUTE</string>
    <string name="clean">CLEAN</string>
    <string name="title_activity_fullscreen">RANDOM ACG Launcher</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="acg">ACG</string>
    <string name="settings">软件设置</string>
    <string name="how_lovely_you_are">Starx\'s work.</string>
    <string name="music_player">音乐播放器</string>
    <string name="set_ringtone">设置系统铃声</string>
    <string name="k">K</string>
    <string name="set_dns">修改系统DNS</string>
    <string name="ms">ms</string>
    <string name="netease">/netease</string>
    <string name="Download">/Download</string>
    <string name="system_ringtone_setting">系统铃声设置</string>
    <string name="ringtone_setting_info">本区块可以为系统设置指定的铃声。</string>
    <string name="ringtone_path">铃声路径</string>
    <string name="ringtone_uri">Ringtone URI</string>
    <string name="Setting">设置</string>
    <string name="musics_album">Musics_album</string>
    <string name="title">Title</string>
    <string name="someone">someone</string>
    <string name="some_album">some_album</string>
    <string name="play_mode">播放模式:</string>
    <string name="play_mode_default">播完即停</string>
    <string name="bitrate">比特率:</string>
    <string name="default_bitrate">128k</string>
    <string name="special_creater">专辑作者:</string>
    <string name="last_song">上一首</string>
    <string name="play">播放</string>
    <string name="next_song">下一首</string>
    <string name="scan">扫描</string>
    <string name="list">列表</string>
    <string name="_00_00">00:00</string>
    <string name="system_dns_setting">系统DNS设置</string>
    <string name="system_dns_setting_info">本区块将在IPTABLES的OUTPUT链增加53端口的DNAT规则，以达到使用指定DNS服务器的效果。</string>
    <string name="dns1">DNS1</string>
    <string name="dns2">DNS2</string>
    <string name="look_down">⇊</string>
    <string name="dnat_to_dns_setting">DNAT TO DNS SETTING</string>
    <string name="dns_ip_address">DNS IP ADDRESS</string>
    <string name="dns_port">DNS PORT</string>
    <string name="delete_first_line_rules">删除第一条规则</string>
    <string name="changeto">切换</string>
    <string name="change">修改</string>
    <string name="dns_old_android_info">本区快可以更改系统默认的DNS，但当网络环境发生变化时，需要重新设置。(早期Android版本生效)</string>
    <string name="flush">刷新</string>
    <string name="select_scan_path">请选择扫描的路径:</string>
    <string name="uri">URI..</string>
    <string name="use_netease_path">使用网易云音乐路径</string>
    <string name="use_local_download_path">使用本地默认下载路径</string>
    <string name="confirm_add_to_list">确认添加到列表</string>
    <string name="max_imgs_limit">最大图片数限制(0=unlimited):</string>
    <string name="enter_the_max_integer">请输入最大整数值</string>
    <string name="random_acg_status">随机ACG图片启用状态</string>
    <string name="apply">应用</string>
    <string name="direct_sync">立即同步</string>
    <string name="sense_ms">主动校时触发范围(ms):</string>
    <string name="lowest_int">请输入最小整数值</string>
    <string name="detail_dialog">详情DIALOG</string>
    <string name="exec_ping">执行PING测试</string>
    <string name="nor_poweroff">正常关机</string>
    <string name="ha_poweroff">硬关机</string>
    <string name="nor_reboot">正常重启</string>
    <string name="global_media_ctrl">极致音量控制</string>
    <string name="global_media_ctrl_descri">此区块可精确控制系统各部分音量的大小。</string>
    <string name="level_percent">Level %</string>
    <string name="percent">%</string>
    <string name="volume_ctrl">音量控制</string>
    <string name="CTRL">控制</string>
    <string name="music_vol">Music</string>
    <string name="call_vol">Call</string>
    <string name="ring_vol">Ring</string>
    <string name="notification_vol">Notification</string>
    <string name="alarm_vol">Alarm</string>
    <string name="accessibility_vol">Accessibility</string>
    <string name="dtmf_vol">DTMF</string>
    <string name="system_vol">System</string>

</resources>
