<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/usefullwd"
        >
        <menu>
            <item
                android:title="@string/local_clock"
                android:id="@+id/clock"/>
            <item
                android:title="@string/worldclock_web"
                android:id="@+id/open_global_time_website"/>
            <item
                android:title="@string/time_test_web"
                android:id="@+id/open_time_check_website"/>
        </menu>
    </item>
    <item
        android:title="@string/usefultools"
        >
        <menu>
            <item
                android:title="@string/global_media_ctrl"
                android:id="@+id/global_media_ctrl"/>
            <item
                android:title="@string/adb_set"
                android:id="@+id/adb_intent"/>
            <item
                android:title="@string/captive_portal_set_title"
                android:id="@+id/captive_portal_intent"/>
            <item
                android:title="@string/super_su_exec"
                android:id="@+id/super_su_exec"/>
            <item
                android:title="@string/set_dns"
                android:id="@+id/set_dns"/>
            <item
                android:title="@string/set_ringtone"
                android:id="@+id/set_ringtone"/>
            <item
                android:title="@string/music_player"
                android:id="@+id/music_player"/>
            <item
                android:title="@string/ddos_tester"
                android:id="@+id/ddos_intent"/>
        </menu>
    </item>
    <item
        android:title="@string/moreinfo"
        >
        <menu>
            <item
                android:title="@string/asrc"
                android:id="@+id/asrc" />
            <item
                android:title="@string/about"
                android:id="@+id/about" />
            <item
                android:title="@string/contact"
                android:id="@+id/contact" />
        </menu>
    </item>
    <item
        android:title="@string/plusopre"
        >
        <menu>
            <item
                android:title="@string/nor_reboot"
                android:id="@+id/nor_reboot"/>
            <item
                android:title="@string/reboot"
                android:id="@+id/reboot"/>
            <item
                android:title="@string/reboot_to_recovery"
                android:id="@+id/reboot_to_recovery"/>
            <item
                android:title="@string/reboot_to_bootloader"
                android:id="@+id/reboot_to_bootloader"/>
            <item
                android:title="@string/nor_poweroff"
                android:id="@+id/nor_poweroff"/>
            <item
                android:title="@string/ha_poweroff"
                android:id="@+id/ha_poweroff"/>
        </menu>
    </item>
    <item
        android:title="@string/settings"
        android:id="@+id/setting"/>
    <item
        android:title="@string/blog"
        android:id="@+id/go_to_blog"/>
    <item
        android:title="@string/exit"
        android:id="@+id/exit" />
</menu>