<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp"
    >

    <TextView
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/select_scan_path"
    />

    <EditText
        android:id="@+id/music_choose_dir"
        android:layout_marginTop="5dp"
        android:ems="15"
        android:textStyle="bold"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/uri" />
    <Button
        android:id="@+id/uri_netease"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_netease_path"
        />
    <Button
        android:id="@+id/uri_download"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_local_download_path"
        />
</LinearLayout>
