<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Music_Player">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:adjustViewBounds="true"
            android:src="@mipmap/music_icon"
            android:id="@+id/music_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/musics_album"
            android:scaleType="fitCenter"
            />
            <!-- app:srcCompat="@color/shojo" !-->
        <TextView
            android:maxLines="1"
            android:gravity="center"
            android:id="@+id/music_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="ontouch"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/music_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/someone"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/music_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/some_album"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/music_seekBar"
            style="@android:style/Widget.Material.Light.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/music_op"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/_00_00"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/music_ed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/_00_00"
                android:textSize="15sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_mode"
                />

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/play_mode_default" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bitrate" />

                <TextView
                    android:id="@+id/music_bitrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_bitrate"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/special_creater" />

                <TextView
                    android:id="@+id/music_album_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/someone"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/music_last"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ontouch"
                android:text="@string/last_song"
                android:contentDescription="@null" />

            <Button
                android:id="@+id/music_play"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ontouch"
                android:text="@string/play"
                />

            <Button
                android:text="@string/next_song"
                android:id="@+id/music_next"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ontouch"
                android:contentDescription="@null" />

            <Button
                android:id="@+id/music_scasn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ontouch"
                android:text="@string/scan" />

            <Button
                android:id="@+id/music_show_list"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ontouch"
                android:text="@string/list" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>