<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DDOS">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5"
        app:cardElevation="5dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ddos_tester"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_block_can_do_a_flood_of_post_packet_to_target_for_test_purpose"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/red" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardElevation="5dp"
        app:contentPadding="5dp"
        android:layout_weight="1.0"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/target_s_url"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/target_url"
                style="@android:style/Widget.Material.Light.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/please_enter_the_target_s_url"
                android:inputType="textUri"
                android:importantForAutofill="no"
                tools:targetApi="o" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_better_result_nplease_select_a_site_with_non_cdn_included_to_execute_the_this_test"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5"
        app:cardElevation="5dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_info"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thread_has_started"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/thread_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_200_count"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/hc_200_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thread_error_count"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/thread_error_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardElevation="5dp"
        app:contentPadding="5dp"
        android:layout_weight="1.0"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thread_s_setting"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/single_thread"
                style="@android:style/Widget.Material.Light.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/num_of_single_threads"
                android:inputType="number"
                android:importantForAutofill="no"
                tools:targetApi="o" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_better_result_please_edit_a_sense_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/cc_thread"
                style="@android:style/Widget.Material.Light.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/num_of_concurrency_threads"
                android:inputType="number"
                android:importantForAutofill="no"
                tools:targetApi="o" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_better_result_please_edit_a_sense_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1.0"
        app:cardElevation="5dp"
        app:contentPadding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/thread_start"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startClick"
                android:text="@string/start_the_thread_pool"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>